@@ -273,10 +273,12 @@ void ElementImpl::scrollIntoView(bool alignToTop)
 void ElementImpl::focus()
 {
     DocumentImpl *doc = getDocument();
-    if (doc)
+    if (doc) {
         doc->updateLayout();
-    if (isFocusable() && renderer()) {
-        renderer()->enclosingLayer()->scrollRectToVisible(getRect());
+        if (isFocusable() && renderer()) {
+            doc->setFocusNode(this);
+            renderer()->enclosingLayer()->scrollRectToVisible(getRect());
+        }
     }
 }
 
